--- a/Pueba1/Views/Shared/_Layout.cshtml
+++ b/Pueba1/Views/Shared/_Layout.cshtml
@@ -27,8 +27,9 @@
             background-color: #D784A6;
         }
 
-        .navbar-nav .nav-link:hover {
-            color: #fff; 
+        .navbar-item:hover nav-Link {
+            color: #fff !important; 
+            
         }
     </style>
 </head>
@@ -62,6 +63,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categorias" asp-action="Index">Categorias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LibrosAutors" asp-action="Index">Libros y Autores</a>
                         </li>
                     </ul>
                 </div>
