--- a/Pueba1/Views/Autors/Create.cshtml
+++ b/Pueba1/Views/Autors/Create.cshtml
@@ -16,19 +16,19 @@
 
                     <div class="form-group">
                         <label asp-for="Nombre" class="control-label">Nombre</label>
-                        <input asp-for="Nombre" class="form-control" placeholder="Ingrese el nombre del autor" />
+                        <input asp-for="Nombre" class="form-control" placeholder="Ingrese el nombre del autor" required />
                         <span asp-validation-for="Nombre" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
                         <label asp-for="Apellido" class="control-label">Apellido</label>
-                        <input asp-for="Apellido" class="form-control" placeholder="Ingrese el apellido del autor" />
+                        <input asp-for="Apellido" class="form-control" placeholder="Ingrese el apellido del autor" required />
                         <span asp-validation-for="Apellido" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
                         <label asp-for="Nacionalidad" class="control-label">Nacionalidad</label>
-                        <input asp-for="Nacionalidad" class="form-control" placeholder="Ingrese la nacionalidad del autor" />
+                        <input asp-for="Nacionalidad" class="form-control" placeholder="Ingrese la nacionalidad del autor" required />
                         <span asp-validation-for="Nacionalidad" class="text-danger"></span>
                     </div>
 
@@ -50,7 +50,7 @@
        
 
         .card {
-            margin-top:80px;
+            margin-top:20px;
             border-radius: 10px;
             background-color: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
