--- a/Pueba1/Views/Libroes/Create.cshtml
+++ b/Pueba1/Views/Libroes/Create.cshtml
@@ -22,17 +22,17 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="Isbn" class="control-label">Isbn</label>
-                                <input asp-for="Isbn" class="form-control" />
+                                <input asp-for="Isbn" class="form-control" required />
                                 <span asp-validation-for="Isbn" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="Titulo" class="control-label">Título</label>
-                                <input asp-for="Titulo" class="form-control" />
+                                <input asp-for="Titulo" class="form-control" required />
                                 <span asp-validation-for="Titulo" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="Descripcion" class="control-label">Descripción</label>
-                                <input asp-for="Descripcion" class="form-control" />
+                                <input asp-for="Descripcion" class="form-control" required />
                                 <span asp-validation-for="Descripcion" class="text-danger"></span>
                             </div>
                         </div>
@@ -41,17 +41,17 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="NombreAutor" class="control-label">Nombre Autor</label>
-                                <input asp-for="NombreAutor" class="form-control" />
+                                <input asp-for="NombreAutor" class="form-control" required />
                                 <span asp-validation-for="NombreAutor" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="Publicacion" class="control-label">Fecha de Publicación</label>
-                                <input asp-for="Publicacion" class="form-control" type="date" />
+                                <input asp-for="Publicacion" class="form-control" type="date" required />
                                 <span asp-validation-for="Publicacion" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="FechaRegistro" class="control-label">Fecha de Registro</label>
-                                <input asp-for="FechaRegistro" class="form-control" type="date"/>
+                                <input asp-for="FechaRegistro" class="form-control" type="date" required />
                                 <span asp-validation-for="FechaRegistro" class="text-danger"></span>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
     <style>
         /* Estilos generales para la tarjeta */
         .card {
-            margin-top: 30px;
+            margin-top: 10px;
             border-radius: 10px;
             background-color: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
