--- a/Pueba1/Views/Categorias/Delete.cshtml
+++ b/Pueba1/Views/Categorias/Delete.cshtml
@@ -96,7 +96,7 @@
             // Mostrar alerta de que no se puede eliminar
             Swal.fire({
                 title: 'No es posible eliminar el registro',
-                text: 'Este registro no puede ser eliminado en este momento.',
+                text: 'Este registro no puede ser eliminado ya que esta relacionado con otro registro.',
                 icon: 'error',
                 confirmButtonText: 'Aceptar',
                 confirmButtonColor: '#D784A6' // Palo de rosa
